<resources>
    <string name="app_name">FileManager Lite</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_item_home">Internal storage</string>
    <string name="nav_item_friends">External storage</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
    </string-array>

    <string name="title_external">External</string>
    <string name="title_internal">Internal</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">delete</string>
    <string name="action_add_folder">new folder</string>
    <string name="action_add_file">new file</string>
    <string name="action_change_text_size">Font size</string>
    <string name="action_change_text_color">Text color</string>
    <string name="action_change_background_color">Theme</string>

    <string name="lbl_property">Property</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_new_folder">New folder</string>
    <string name="lbl_new_file">New file</string>
    <string name="lbl_select_all">Select all</string>
    <string name="lbl_de_select_all">Deselect all</string>
    <string name="lbl_copy_here">Copy selection here</string>
    <string name="lbl_move_here">Move selection here</string>
    <string name="lbl_delete_selection">Delete selection</string>
    <string name="lbl_add_bookmark">Add  bookmark</string>
    <string name="lbl_rename_file">Rename</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_audios">Audios</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_images">Images</string>
    <string name="lbl_internal_storage">Internal storage</string>
    <string name="lbl_external_storage">SD storage</string>
    <string name="lbl_ram">RAM</string>

    <string name="btn_lbl_create">Create</string>
    <string name="btn_lbl_cancel">Cancel</string>
    <string name="btn_lbl_okay">OK</string>
    <string name="btn_lbl_rename">Rename</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>

    <string name="lbl_title_rename_folder">Rename Folder</string>
    <string name="lbl_title_rename_file">Rename File</string>

    <string name="msg_prompt_delete_folder">Are you sure you want delete #name# folder?</string>
    <string name="msg_prompt_delete_folders">Are you sure you want delete selected folders?</string>
    <string name="msg_prompt_unzip_folder">Are you sure you want to unzip folder</string>
    <string name="msg_prompt_save_text_file">Are you sure you want to save file</string>

    <string name="msg_prompt_file_created">File created.</string>
    <string name="msg_prompt_file_not_created">File not created..!</string>
    <string name="msg_prompt_file_already_exits">File already exits</string>

    <string name="msg_prompt_folder_created">Folder created.</string>
    <string name="msg_prompt_folder_not_created">Folder not created ..!</string>
    <string name="msg_prompt_folder_already_exits">Folder already exits</string>

    <string name="msg_prompt_not_renamed">Fail to renamed ..!</string>
    <string name="msg_prompt_renamed">Successfully renamed.</string>
    <string name="msg_prompt_name_already_exits">Name already exits</string>

    <string-array name="nav_item_activity_titles">
        <item>Storage 0</item>
        <item>Storage 1</item>
        <item>Images</item>
        <item>Audios</item>
        <item>Videos</item>
        <item>Settings</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="external_storage">External Storage</string>
    <string name="images">Images</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="no_media_found">No files</string>
    <string name="lock">Lock</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="filemanager_lite">Filemanager Lite</string>
    <string name="turn_on">Turn on</string>
    <string name="storage_permission_is_required">Storage permission is required</string>
    <string name="cant_s_access_files">Cant\'s access files</string>
    <string name="new_folder">new folder</string>
    <string name="lbl_search">search</string>
    <string name="show_hidden_file">Show hidden file</string>
    <string name="create_folder">Create Folder</string>
    <string name="hint_lbl_new_folder">New Folder</string>
    <string name="create_file">Create File</string>
    <string name="hint_lbl_new_file">New File</string>
    <string name="lbl_rename">Rename</string>
    <string name="file_details">File details</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="ram">RAM</string>
    <string name="free_space">Free space</string>
    <string name="free">Free</string>
    <string name="lbl_delete_single_file">Are you sure to delete this file?</string>
    <string name="lbl_delete_multiple_files">"Are you sure you want to delete the selected files?"</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="version">Version 2.1</string>
    <string name="insert_sd_card">Insert SD Card</string>
    <string name="extract">Extract</string>
    <string name="navigation">Navigation</string>
    <string name="create_file_folder">Create file/folder</string>
    <string name="explore_options_and_settings">Explore options and settings</string>
    <string name="long_press">Long press</string>
    <string name="select_folder_or_file">Select folder or file</string>
    <string name="copy_delete_folder_or_file">Copy/Delete folder or file</string>
    <string name="choose_menu_options">Choose menu options</string>
    <string name="menu">Menu</string>
    <string name="copy">Copy</string>
    <string name="lbl_move">move</string>
    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-5081856790359576/9410706049</string>
    <string name="interstitial_full_screen">ca-app-pub-5081856790359576/2461018845</string>

</resources>
