<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droids.satish.filemanager.activity.SettingsActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_folder"
        android:icon="@mipmap/ic_menu_plus"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_menu_bottom"
        android:orderInCategory="100"
        android:title="more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_property"
                android:orderInCategory="100"
                android:title="@string/lbl_property"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_rename"
                android:orderInCategory="100"
                android:title="@string/lbl_rename_file"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_new_file"
                android:orderInCategory="100"
                android:title="@string/lbl_new_file"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_select_all"
                android:orderInCategory="100"
                android:title="@string/lbl_select_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_de_select_all"
                android:orderInCategory="100"
                android:title="@string/lbl_de_select_all"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_copy_selection"
                android:orderInCategory="100"
                android:title="@string/lbl_copy_here"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_move_selection"
                android:orderInCategory="100"
                android:title="@string/lbl_move_here"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_add_bookmarks"
                android:orderInCategory="100"
                android:title="@string/lbl_add_bookmark"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>
