<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.SettingsActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@mipmap/ic_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@mipmap/ic_menu"
        android:orderInCategory="100"
        android:title="more"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_text_size"
                android:icon="@mipmap/ic_change_text_size"
                android:orderInCategory="100"
                android:title="@string/action_change_text_size"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_background_color"
                android:icon="@mipmap/ic_menu_change_background"
                android:orderInCategory="100"
                android:title="@string/action_change_background_color"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_text_color"
                android:icon="@mipmap/ic_change_text_color"
                android:orderInCategory="100"
                android:title="@string/action_change_text_color"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>
