<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.droids.tamada.filemanager.activity.SettingsActivity">
    <item
        android:id="@+id/action_delete"
        android:icon="@mipmap/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_new_file"
        android:icon="@mipmap/ic_menu_new_file"
        android:orderInCategory="100"
        android:title="@string/action_add_file"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_folder"
        android:icon="@mipmap/ic_menu_new_folder"
        android:orderInCategory="100"
        android:title="@string/action_add_folder"
        app:showAsAction="always" />
</menu>
