<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/guide_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlackTransparent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/id_nav_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_guide_menu_nav" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_guide_new_file" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_guide_new_folder" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_nav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:text="@string/navigation"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/id_nav"
                android:padding="5dp"
                android:text="@string/explore_options_and_settings"
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/create_file_folder"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_nav_layout"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_white_border"
        android:padding="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp"
            android:src="@drawable/ic_guide_folder" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_guide_check" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/id_item_layout"
        android:orientation="vertical">

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/long_press"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/select_folder_or_file"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorWhite"
                android:text="@string/copy_delete_folder_or_file"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
                android:text="@string/choose_menu_options" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:text="@string/copy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:text="@string/delete"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:textColor="@color/colorWhite"
               android:text="@string/menu" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp"
                android:src="@drawable/ic_guide_copy" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:src="@drawable/ic_guide_delete" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:src="@drawable/ic_guide_menu_bottom" />
        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>