<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!--layout for profile-->
    <RelativeLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_profile" />

    </RelativeLayout>
    <!--to display items in a list-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/drawerList"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/nav_header_container"
        android:layout_marginTop="15dp" />
    <!--layout for settings button bottom of navigation drawer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drawerList"
        android:layout_margin="5dp"
        android:background="@drawable/bg_comment_like_layout"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">
        <!--layout for images-->
        <LinearLayout
            android:id="@+id/layout_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_image_list" />

            <TextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/lbl_images"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--layout for videos-->
        <LinearLayout
            android:id="@+id/layout_videos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_video_list" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/lbl_videos"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--layout for audios-->
        <LinearLayout
            android:id="@+id/layout_audios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_audio_list" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:text="@string/lbl_audios"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/bg_comment_like_layout"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <ImageButton
            android:id="@+id/img_btn_settings"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@null"
            android:src="@mipmap/ic_settings" />

    </LinearLayout>


</RelativeLayout>